--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,3 +53,14 @@ body{
     width: 150px ;
     background-color: #aaa;
 }
+
+/* Cards */
+.cards{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.card{
+    border: 1px solid black;
+    padding: 5px;
+}
