--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,11 @@
+/* Fonts */
+/* font-family: 'Pacifico', cursive;
+ */
+/* General styles */
+:root{
+    --mainColor : #242121;
+    --secondaryColor : #2b2b2b ;
+}
 *{
     padding: 0;
     margin: 0;
@@ -5,62 +13,224 @@
 }
 
 body{
-    background-color: burlywood;
+    background-color: var(--mainColor);
     min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
 }
-.search-form{
-    background-color: #ddd;
+a{
+    color: #fff;
+    text-decoration: none;
+}
+section{
+    margin-top: 30px;
+}
+.section-title{
+    color: #fff;
+    text-align: center;
+}
+
+  /* scroll */
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #c9999927;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgba(247, 167, 167, 0.452);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+
+/* Header */
+header{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; 
+    gap: 15px;
+    align-items: center;
+    background-color: var(--secondaryColor);
+    padding: 10px 20px;
+    box-shadow:0px 4px 4px 0  #000000 ;
+}
+
+.search-form{
+    display: flex;
     gap: 10px;
-    width: 70%;
-    margin: auto;
-    padding: 50px;
+    width: 550px; 
     border-radius: 5px;
 }
+
 .search-input{
-    width: 100%;
-    padding: 5px ;
+    width: 100%; 
+    padding: 6px;
     border-radius: 5px;
     border: 0ch;
-    outline: 1px solid black;
-
+    background-color: #353535;
+    color: #808080;
 }
+.search-input::placeholder{
+    color: #808080;
+}
+
 .search-btn{
     width: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    border: 1px solid black;
+    background-color: #353535;
+    border: 0;
+    color: #808080;
 }
 
+@media (max-width: 800px) {
+    header .home-title{
+        font-size: 1.3rem;
+    }
+    .search-form{
+        width: 320px 
+    }
+}
+@media (max-width: 500px) {
+    header {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+}
 /* auto complete */
+.auto-complete-input{
+    width: 100%;
+    position: relative;
+    z-index: 100;
+}
 .auto-Complete-container{
+    position: absolute;
+    width: 100%;
+    top: 105%;
+    border-radius: 5px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    
     flex-wrap: wrap;
-    gap: 20px;
 
 }
 .auto-Complete-container p{
-    width: 150px ;
-    background-color: #aaa;
+    width: 100% ;
+    background-color: #555;
+    color: #fff;
+    padding: 7px;
+
+}
+.auto-Complete-container p:hover{
+    background-color: #777;
+}
+.auto-Complete-container p:not(:last-child){
+    border-bottom: 1px solid #fff;
+}
+.auto-Complete-container p:last-child{
+    border-radius: 0 0 5px 5px;
+}
+
+/* suggested books*/
+.suggested-books , .searched-books{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 20px;
+    gap: 20px ;
 }
 
 /* Cards */
-.cards{
+.cards , .suggested-cards{
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 25px;
 }
 .card{
-    border: 1px solid black;
+    display: flex;
+    align-items: center;
     padding: 5px;
+    position: relative;
 }
+.card img{
+    transform: rotate(-3deg);
+    position: relative;
+    left:8px;
+    width: 140px;
+    height: 205px;
+}
+.card-content{
+    overflow-y: auto;
+    border-radius: 0 5px 5px 0;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-content: center;
+    width: 220px ;
+    padding: 15px;
+    color: #fff;
+    height: 170px;
+    text-align: center;
+}
+
+.card-content .btn{
+    background-color: transparent;
+    border: 1px solid #fff;
+    width: fit-content;
+    display: block;
+    padding: 5px 10px;
+    margin: auto;
+}
+.card-content p span{
+    text-transform: capitalize;
+}
+
+
+.card:nth-child(1n) .card-content{
+    background-color:#71C5F4  ;
+}
+.card:nth-child(2n) .card-content{
+    background-color:#AB71F4  ;
+}
+.card:nth-child(3n) .card-content{
+    background-color:#F471A8 ;
+}
+.card:nth-child(4n) .card-content{
+    background-color:#f00d51 ;
+}
+
+
+/* card media query */
+@media (max-width:500px) {
+    .card{
+        width: 90%;
+        font-size: 0.8em;
+    }
+    .card img{
+        width: 100px;
+        height: 180px;
+    }
+}
+@media (max-width:300px) {
+    .card{
+        width: 75%;
+    }
+    .card img{
+        transform: rotate(-3deg);
+        position: relative;
+        left:8px;
+        width: 70px;
+        height: 180px;
+    }
+}
+
+
+
