--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,7 @@ body {
     display: block;
     margin: 35px auto;
     padding: 0.6rem 1.7rem;
-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .btn-go:hover {
@@ -88,11 +88,14 @@ transition: all 0.3s;
     div.intro p.title {
         font-size: 35px;
         margin-top: 100px;
+        text-align: left;
+
     }
 
     div.intro p.desc {
         font-size: 18px;
         line-height: 30px;
+        text-align: left;
     }
 
     .btn-go {
@@ -108,9 +111,18 @@ transition: all 0.3s;
     .content-container {
         display: flex;
         flex-direction: row-reverse;
-        margin-top: 90px;
+        margin-top: 150px;
     }
 
+    .title {
+        text-align: left;
+        width: 80%;
+    }
+
+    .desc {
+        text-align: left;
+        width: 80%;
+    }
 
     .intro {
         justify-content: center;
